# C-

./: Newthon_raphson.cxx  Pi_Monte_Carlo.cxx  circuitoRLC.c  euler-method.cpp  secret-number.cpp  xorcripto.cpp
OpenCV/: CMakeLists.txt  DisplayImage.cpp  ImageChannels.cpp  Multispectral.cpp
back to basics/: coin_flip.cpp  if_count.cxx  sum.cxx  sum_for.cxx  sum_input.cxx  sum_while.cxx
